fix image spacing

--- a/css/theme-bootstrap4.css
+++ b/css/theme-bootstrap4.css
@@ -14199,6 +14199,11 @@ p {
 .entry-content img {
   max-width: 75%;
   height: auto;
+  margin-left: 100px;
+}
+
+a img.wp-post-image {
+  display: inline-block;
 }
 
 .entry-content {
