--- a/src/sass/theme/_theme.scss
+++ b/src/sass/theme/_theme.scss
@@ -89,6 +89,11 @@ p {
 .entry-content img {
     max-width: 75%;
     height: auto;
+    margin-left: 100px;
+}
+
+a img.wp-post-image {
+    display: inline-block;
 }
 
 .entry-content {
